--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@ var templ=document.getElementById("templ").innerHTML;
 var names=[	{Name:"Queue",Desc:"<p>I am not Queue.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ultricies est ut purus dapibus dignissim. Donec porttitor vestibulum quam, eget eleifend massa sodales semper. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nam quis pharetra dolor. Nulla condimentum eget lacus eu ullamcorper. Vivamus feugiat pellentesque lorem quis rhoncus. Aenean viverra cursus diam fringilla tristique. Donec eu mauris non tellus ullamcorper commodo a sit amet tellus. Suspendisse quis elit neque. Nullam justo neque, maximus et tellus scelerisque, laoreet accumsan tellus. Duis massa dui, porta eu ipsum in, maximus luctus eros. In et diam eros. Curabitur libero leo, venenatis sed ante quis, posuere viverra nunc.</p>"},
 			{Name:"Edgaru089",Desc:"<p>I am not Edgar.Donec suscipit dapibus porta. Suspendisse ultrices hendrerit dictum. Praesent quis ex venenatis, semper augue sed, scelerisque leo. Donec eget volutpat lacus, quis luctus sapien. Integer id massa ac leo consequat fermentum. Aliquam quis venenatis metus. Nam bibendum sed ipsum vel fermentum. Sed pulvinar laoreet consequat. Nam congue aliquam pretium.</p>"},
 			{Name:"Alan-Liang",Desc:"<p>I am not Alan-Liang.</p>"},
-			{Name:"Tiger Fan",Desc:"<p>I continue loving myself...</p>"},
+			{Name:"Tiger Fan",Desc:"<p>I continue loving myself...</p><p>我自尊自爱<s>自慰</s>自卫</p>"},
 			{Name:"Sunny Peng",Desc:"<p>I am not Sunny Peng</p>"}
 			];
 function tpl(str,idn){
