--- a/products/view.html
+++ b/products/view.html
@@ -64,7 +64,7 @@ var list={Minecraft:[{name:"Tiger Fan",id:0}],Flash:[{name:"Egamad",id:1}],Deskt
 	position:absolute;
 	top:0;
 	right:0;
-	left:99999px;
+	left:0;
 }
 #pcontainer{
 	position:fixed;
@@ -73,14 +73,15 @@ var list={Minecraft:[{name:"Tiger Fan",id:0}],Flash:[{name:"Egamad",id:1}],Deskt
 	width:100%;
 	overflow:scroll;
 	height:100%;
-	display:none;
+	display:block;
 }
 .icon{
 	width:100%;
 	height:100%;
 }
 #pitem{
-	display:none;
+	display:block;
+	left:400px;
 }
 .p-type > li + li{
 	margin-left:24px;
@@ -100,6 +101,9 @@ var list={Minecraft:[{name:"Tiger Fan",id:0}],Flash:[{name:"Egamad",id:1}],Deskt
 	-moz-transition:transform ease-out 0.2s;
 	-o-transition:transform ease-out 0.2s;
 	-webkit-animation:transform ease-out 0.2s;	
+}
+#container{
+	display:none;
 }
 </style>
 </head>
@@ -169,27 +173,40 @@ function winresize(){
 	plist.style.left = window.innerWidth+16+"px";
 	pitem.style.left = window.innerWidth+16+"px";
 }
-window.onresize = winresize;
-setTimeout(winresize,500);
+//window.onresize = winresize;
+//setTimeout(winresize,500);
 
 var bproj=$("bproj");
 var container=$("container");
 var pcontainer=$("pcontainer");
 var pitem=$("pitem");
+plist.style.right = window.innerWidth-416+"px";
 var pitext=$("pitext");
 bproj.onclick=function(e){
-	e.preventDefault();
-	pcontainer.style.display="block";
-	animate(plist,{duration:200,left:0},"left");
-	setTimeout(function(){container.style.display="none";},200);
-	window.onresize=null;
-	history.pushState({stat:1},'',"/products/");
+	history.back();
 };
 
 var backbtn=$("back");
 backbtn.onclick=function(){
-	history.back();
-	if(window.issubopened)history.back();
+	if(window.issubopened){
+		window.issubopened=false;
+		animate(plist,{duration:200,left:window.innerWidth+16},"left");
+		animate(plist,{duration:200,right:0},"right");
+		animate(pitem,{duration:200,left:window.innerWidth},"left");
+		container.style.display="block";
+		setTimeout(function(){pcontainer.style.display="none";},200);
+		window.onresize=winresize;
+		history.pushState({stat:1},'',"/products/");
+		history.pushState({stat:0},'',"/");
+		return;
+	}else{
+		animate(plist,{duration:200,left:window.innerWidth+16},"left");
+		container.style.display="block";
+		setTimeout(function(){pcontainer.style.display="none";},200);
+		window.onresize=winresize;
+		history.pushState({stat:0},'',"/");
+		return;
+	}
 };
 var templ=document.getElementById("templ").innerHTML;
 var p_list=$("p-list");
@@ -223,7 +240,10 @@ function getSubData(id,callback){
 }
 var closebtn=$("close");
 closebtn.onclick=function(){
-	history.back();
+		window.issubopened=false;
+		animate(pitem,{duration:200,left:window.innerWidth},"left");
+		animate(plist,{duration:200,right:0},"right");
+		history.pushState({stat:1},'',"/products/");
 };
 var subListener = function(e){
 	var id=e.currentTarget.getAttribute("data-id");
@@ -255,30 +275,10 @@ for(var i=0;i<listitems.length;i++){
 	listitems[i].onclick=subListener;
 }
 
+var id=getParam("id");
 window.onpopstate=function(e){
-	if(e.state==undefined || e.state.stat == 0){
-		animate(plist,{duration:200,left:window.innerWidth+16},"left");
-		container.style.display="block";
-		setTimeout(function(){pcontainer.style.display="none";},200);
-		window.onresize=winresize;
-		return;
-	}
-	if(e.state.stat == 1){
-		if(window.issubopened){
-			window.issubopened=false;
-			animate(pitem,{duration:200,left:window.innerWidth},"left");
-			animate(plist,{duration:200,right:0},"right");
-			return;
-		}else{
-			pcontainer.style.display="block";
-			animate(plist,{duration:200,left:0},"left");
-			setTimeout(function(){container.style.display="none";},200);
-			window.onresize=null;
-			return;
-		}
-	}
-	if(e.state.stat == 2){
-		var id=e.state.id;
+	if(e.state==undefined || e.state.stat == 2){
+		id=getParam("id");
 		if(window.issubopened){
 			animate(pitem,{duration:200,left:window.innerWidth},"left");
 			animate(plist,{duration:200,right:0},"right");
@@ -302,7 +302,41 @@ window.onpopstate=function(e){
 		getSubData(id,callback);
 		return;
 	}
+	if(e.state.stat == 0){
+		animate(plist,{duration:200,left:window.innerWidth+16},"left");
+		container.style.display="block";
+		setTimeout(function(){pcontainer.style.display="none";},200);
+		window.onresize=winresize;
+		return;
+	}
+	if(e.state.stat == 1){
+		if(window.issubopened){
+			window.issubopened=false;
+			animate(pitem,{duration:200,left:window.innerWidth},"left");
+			animate(plist,{duration:200,right:0},"right");
+			return;
+		}else{
+			e.preventDefault();
+			pcontainer.style.display="block";
+			animate(plist,{duration:200,left:0},"left");
+			setTimeout(function(){container.style.display="none";},200);
+			window.onresize=null;
+			return;
+		}
+	}
 };
+(function(){
+	var callback=function(msg){
+		if(msg==-1)subListener(e);
+		if(window.issubopened)closebtn.onclick();
+		window.issubopened=true;
+		pitext.innerHTML = msg;
+		pitem.style.display="block";
+		pitem.style.left=400;
+		plist.style.right=window.innerWidth-416;
+	};
+	getSubData(id,callback);
+})();
 </script>
 <script src="/mdc.js"></script>
 <script>mdc.autoInit()</script>
