--- a/products/view.html
+++ b/products/view.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <script>
-var list={Minecraft:[{name:"Tiger Fan",id:0}],Flash:[{name:"Egamad",id:1}],Desktop:[{name:"Edgar u089",id:2},{name:"Queue Huo",id:3},{name:"Alan Liang",id:4}]};
+var list={Minecraft:[{name:"Tiger Fan",id:0}],Flash:[{name:"Traps N' Roads",id:1}],Desktop:[{name:"Edgar u089",id:2},{name:"Queue Huo",id:3},{name:"Alan Liang",id:4}]};
 </script>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>客页 | KEEER</title>
