--- a/products/view.html
+++ b/products/view.html
@@ -105,6 +105,9 @@ var list={Minecraft:[{name:"Tiger Fan",id:0}],Flash:[{name:"Traps N' Roads",id:1
 #container{
 	display:none;
 }
+#pitem,#pitext{
+	height:100%;
+}
 </style>
 </head>
 <body>
