--- a/index.html
+++ b/index.html
@@ -101,6 +101,9 @@ var list={Minecraft:[{name:"Tiger Fan",id:0}],Flash:[{name:"Traps N' Roads",id:1
 	-o-transition:transform ease-out 0.2s;
 	-webkit-animation:transform ease-out 0.2s;	
 }
+#pitem,#pitext{
+	height:100%;
+}
 </style>
 </head>
 <body>
