--- a/products/0/product.html
+++ b/products/0/product.html
@@ -1,1 +1,21 @@
-Product <b>pa</b><i>g</i><del>e</del.
+<style>
+
+.hero{
+	width:40%;
+	position:static;
+
+	float:left;
+}
+.h1 {
+	font-size: xx-large;
+}
+.h1,.h2{
+	float:left;
+}
+</style>
+<img class="hero" src="./0/hero.jpg">
+<span class="h2">
+<span class="h1">Lorum Ipsum</span>
+<br />
+hello
+</span>
