--- a/products/index.html
+++ b/products/index.html
@@ -1,15 +1,19 @@
-﻿<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!doctype html>
+<html>
 <head>
 <script>
-var list={MinecraftPE游戏地图:[{name:"Tiger Fan",id:0}],Flash:[{name:"Traps N'Roads",id:1}],Desktop:[{name:"Edgar u089",id:2},{name:"Queue Huo",id:3},{name:"Alan Liang",id:4}]};
+var list={MinecraftPE游戏地图:[{name:"Tiger Fan",id:0}],Flash:[{name:"Traps N' Roads",id:1}],Desktop:[{name:"Edgar u089",id:2},{name:"Queue Huo",id:3},{name:"Alan Liang",id:4}]};
 </script>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>客页 | KEEER</title>
 <!--google stylesheets-->
 <link href="/gs.css" rel="stylesheet" type="text/css" />
 <link href="/mdc.css" rel="stylesheet" type="text/css" />
 <link href="/mdc-patch.css" rel="stylesheet" type="text/css" />
+
+<link href="/styles.css" rel="stylesheet" type="text/css" />
+
+<meta charset="utf-8">
+<title>客页 | KEEER</title>
+
 <script language="x/templ" id="templ">
   <li class="mdc-list-item mdc-list-i prod" data-id="{{id}}" data-mdc-auto-init="MDCRipple" id="prod{{id}}">{{name}}</li>
 </script>
@@ -18,100 +22,61 @@ var list={MinecraftPE游戏地图:[{name:"Tiger Fan",id:0}],Flash:[{name:"Traps 
 	<div style="top: 19px; left: 54px; width: 48px; height: 48px;"><img src="/icons/more.svg" class="icon"></div>
 </div>
 </script>
-<style type="text/css">
-#mtitle {
-	font-size: 52px;
-	text-align: center;
-	margin-top: 150px;
-}
-#buttons {
-	font-size: 32px;
-	margin-top: 100px;
-}
-#buttons button{
-	font-size: 32px;
-	width:170px;
-	height:60px;
-}
-#pinner {
-	transition: opacity .3s ease-in-out;
-	display:block;
-	position: relative;
-	width: 170px;
-	background-color: #7dce44;
-	text-align:left;
-}
-#dproj {
-	display: inline-table;
-}
-#pinner a:hover {
-    padding-left: 16px;
-}
-#pinner a{
-	transition: padding .3s ease-in-out;
-	 padding-left: 8px;
-	text-decoration:none;
-	color:#ff6666;
-}
-[hidden]{opacity:0;}
-#dproj:hover #pinner{
-	opacity:1;
-}
-#pinner.focus{
-	opacity:1;
-}
-#plist,#pitem{
-	position:absolute;
-	top:0;
-	right:0;
-	left:0;
-}
-#pcontainer{
-	position:fixed;
-	top:0;
-	left:0;
-	width:100%;
-	overflow:scroll;
-	height:100%;
-	display:block;
-}
-.icon{
-	width:100%;
-	height:100%;
-}
-#pitem{
-	display:none;
-}
-.p-type > li + li{
-	margin-left:24px;
-}
-.p-type.p-closed > li + li{
-	display:none;
-}
-.icon.less{
-	transform:rotate(180deg);
-	-ms-transform:rotate(180deg); /* Internet Explorer */
-	-moz-transform:rotate(180deg); /* Firefox */
-	-webkit-transform:rotate(180deg); /* Safari 和 Chrome */
-	-o-transform:rotate(180deg); /* Opera */
-}
-.icon{
-	transition:transform ease-out 0.2s;
-	-moz-transition:transform ease-out 0.2s;
-	-o-transition:transform ease-out 0.2s;
-	-webkit-animation:transform ease-out 0.2s;	
-}
-#container{
-	display:none;
-}
-#pitem,#pitext{
-	height:100%;
-}
-</style>
+
 </head>
+
 <body>
-<div id="pcontainer">
-<div id="plist">
+<div id="main" style="display:none;">
+<div class="header" id="header">
+	<span class="htext">客页 | KEEER</span>
+    <span class="nav">
+    	<a href="/about.html">关于我们</a>
+        <a href="/products/">项目列表</a>
+        <a href="/contact.html">联系我们</a>
+        <a href="/en/">English</a>
+    </span>
+</div>
+<div class="title">
+	<div class="content">
+		客页工作室<br />
+		我们的独立游戏
+	</div>
+</div>
+<div class="main">
+	<div class="content">
+        <div class="header active">
+            <span class="htext">最新项目</span>
+            <button class="nav green" id="blistall">查看全部></button>
+        </div>
+        <hr />
+        <ul>
+            <li>Lorum ipsum</li>
+            <li>Lorum ipsum</li>
+            <li>Lorum ipsum</li>
+            <li>Lorum ipsum</li>
+            <li>Lorum ipsum</li>
+            <li>Lorum ipsum</li>
+            <li>Lorum ipsum</li>
+            <li>Lorum ipsum</li>
+            <li>Lorum ipsum</li>
+            <li>Lorum ipsum</li>
+            <li>Lorum ipsum</li>
+        </ul>
+        <div style="text-align:center;"><button class="nav green" id="blist">项目列表</button></div>
+    </div>
+</div>
+<div class="footer">
+	<div class="content">
+    	<a class="about" href="/about.html">关于我们</a>
+        <a class="plist_link" href="/products/">项目列表</a>
+        <a class="contact-us" href="/contact.html">联系我们</a>
+    </div>
+    <a href="http://www.keeer.ml/"><img class="logo" src="/logo.png" /></a>
+</div>
+</div>
+
+<div id="pcontainer" style="display:block;">
+<div id="plist" style="left:0;">
 <header class="mdc-toolbar">
   <div class="mdc-toolbar__row">
 	<div class="hi">
@@ -157,48 +122,127 @@ var list={MinecraftPE游戏地图:[{name:"Tiger Fan",id:0}],Flash:[{name:"Traps 
 </div>
 </div>
 
-<div id="container">
-<h1 id="mtitle">客页工作室 | KEEER</h1>
-<center id="buttons">
-<a href="about.html"><button class="blue" id="babout">关于我们</button></a>
-<a href="/products/"><button class="green" id="bproj">项目</button></a>
-<a href=""><button class="red" disabled id="bjoin">加入我们</button></a>
-</center>
-</div>
 
-
-
+<!-- scripts -->
 <script src="/utils.js"></script>
+<script src="/pjax.js"></script>
 <script>
+var header=$("header");
+window.onscroll=function(e){
+	if(window.pageYOffset>=400-64){
+		header.classList.add("active");
+	}else{
+		header.classList.remove("active");
+	}
+};
+</script>
+<script>
+pjax.pagecount=0;
+pjax.pages=[];
+var listeners={};
+listeners.main=function(){
+	animate(plist,{duration:200,left:window.innerWidth+16},"left");
+	main.style.display="block";
+	setTimeout(function(){pcontainer.style.display="none";},200);
+	window.onresize=winresize;
+	window.issubopened=false;
+	return;
+};
+listeners.list=function(){
+	if(window.issubopened){
+		setTimeout(function(){window.issubopened=false;},200);
+		window.issubpened="animating";
+		animate(pitem,{duration:200,left:window.innerWidth},"left");
+		animate(plist,{duration:200,right:0},"right");
+		return;
+	}else{
+		pcontainer.style.display="block";
+		animate(plist,{duration:200,left:0},"left");
+		setTimeout(function(){main.style.display="none";},200);
+		window.onresize=null;
+		return;
+	}
+};
+listeners.subpage=function(){
+	var id=getParam("id");
+	if(window.issubopened==true){
+		animate(pitem,{duration:200,left:window.innerWidth},"left");
+		animate(plist,{duration:200,right:0},"right");
+	}
+	var callback=function(msg){
+		if(msg==-1){
+			alert("对不起，此项目不存在，请通知管理员，谢谢");
+			history.go(-1);
+			return;
+		}
+		if(window.issubopened){
+			setTimeout(function(){
+				pitext.innerHTML = msg;
+				animate(pitem,{duration:200,left:400},"left");
+				animate(plist,{duration:200,right:window.innerWidth-416},"right");
+			},200);
+			if(window.issubopened=="animating")
+				setTimeout(function(){window.issubopened=true;},200);
+		}else{
+			window.issubopened=true;
+			pitext.innerHTML = msg;
+			pitem.style.display="block";
+			animate(pitem,{duration:200,left:400},"left");
+			animate(plist,{duration:200,right:window.innerWidth-416},"right");
+		}
+	};
+	getSubData(id,callback);
+	return;
+};
+var pages={};
+(function(titles,urls){
+	for(var i in listeners){
+		if(i=="subpage"){
+			pages[i]=[];
+			for(var o in list){
+				for(var j=0;j<list[o].length;j++){
+					pages[i][list[o][j].id]=new pjax.page(
+						list[o][j].name+" | 项目 | 客页",
+						"/products/view.html?id="+list[o][j].id,
+						listeners[i]
+					);
+				}
+			}
+			return;
+		}
+		pages[i]=new pjax.page(
+			titles[i],
+			urls[i],
+			listeners[i]
+		);
+	}
+})({"main":"客页 | KEEER",
+	"list":"项目 | 客页"
+	},
+	{"main":"/",
+	"list":"/products/"
+});
+pjax.history=[pjax.pages[1]];
+
 var plist=$("plist");
 function winresize(){
 	plist.style.left = window.innerWidth+16+"px";
 	pitem.style.left = window.innerWidth+16+"px";
 }
-//window.onresize = winresize;
-//setTimeout(winresize,500);
 
-var bproj=$("bproj");
-var container=$("container");
+var blist=$("blist");
+var blistall=$("blistall");
+var main=$("main");
 var pcontainer=$("pcontainer");
 var pitem=$("pitem");
-pitem.style.left = window.innerWidth+16+"px";
 var pitext=$("pitext");
-bproj.onclick=function(e){
-	history.back();
+blistall.onclick=blist.onclick=function(e){
+	pjax.push(pages.list);
 };
 
 var backbtn=$("back");
 backbtn.onclick=function(){
-	if(window.issubopened)history.pushState({stat:1},'',"/products/");
-	if(window.issubopened)window.issubopened=false;
-	animate(plist,{duration:200,left:window.innerWidth+16},"left");
-	animate(plist,{duration:200,right:0},"right");
-	animate(pitem,{duration:200,left:window.innerWidth+16},"left");
-	container.style.display="block";
-	setTimeout(function(){pcontainer.style.display="none";},200);
-	window.onresize=winresize;
-	history.pushState({stat:0},'',"/");
+	pjax.push(pages.main);
 };
 var templ=document.getElementById("templ").innerHTML;
 var p_list=$("p-list");
@@ -232,88 +276,28 @@ function getSubData(id,callback){
 }
 var closebtn=$("close");
 closebtn.onclick=function(){
-	history.back();
+	pjax.push(pages.list);
 };
 var subListener = function(e){
 	var id=e.currentTarget.getAttribute("data-id");
-	if(window.issubopened){
-		animate(pitem,{duration:200,left:window.innerWidth},"left");
-		animate(plist,{duration:200,right:0},"right");
-	}
-	var callback=function(msg){
-		if(msg==-1)subListener(e);
-		if(window.issubopened){
-			setTimeout(function(){
-				pitext.innerHTML = msg;
-				animate(pitem,{duration:200,left:400},"left");
-				animate(plist,{duration:200,right:window.innerWidth-416},"right");
-			},200);
-		}else{
-			window.issubopened=true;
-			pitext.innerHTML = msg;
-			pitem.style.display="block";
-			animate(pitem,{duration:200,left:400},"left");
-			animate(plist,{duration:200,right:window.innerWidth-416},"right");
-		}
-		history.pushState({stat:2,id:id},'',"/products/view.html?id="+id);
+	var exec=function(){
+		pjax.push(pages.subpage[parseInt(id)]);
+		window.issubopened=true;
 	};
-	getSubData(id,callback);
+	if(window.issubopened){
+		pjax.push(pages.list);
+		setTimeout(exec,201);
+		return;
+	}
+	exec();
 };
 var listitems=p_list.querySelectorAll(".p-type>li+li");
 for(var i=0;i<listitems.length;i++){
 	listitems[i].onclick=subListener;
 }
-
-window.onpopstate=function(e){
-	if(e.state==undefined || e.state.stat == 1){
-		if(window.issubopened){
-			window.issubopened=false;
-			animate(pitem,{duration:200,left:window.innerWidth},"left");
-			animate(plist,{duration:200,right:0},"right");
-			return;
-		}else{
-			pcontainer.style.display="block";
-			animate(plist,{duration:200,left:0},"left");
-			setTimeout(function(){container.style.display="none";},200);
-			window.onresize=null;
-			return;
-		}
-	}
-	if(e.state.stat == 0){
-		animate(plist,{duration:200,left:window.innerWidth+16},"left");
-		container.style.display="block";
-		setTimeout(function(){pcontainer.style.display="none";},200);
-		window.onresize=winresize;
-		return;
-	}
-	if(e.state.stat == 2){
-		var id=e.state.id;
-		if(window.issubopened){
-			animate(pitem,{duration:200,left:window.innerWidth},"left");
-			animate(plist,{duration:200,right:0},"right");
-		}
-		var callback=function(msg){
-			if(msg==-1)subListener(e);
-			if(window.issubopened){
-				setTimeout(function(){
-					pitext.innerHTML = msg;
-					animate(pitem,{duration:200,left:400},"left");
-					animate(plist,{duration:200,right:window.innerWidth-416},"right");
-				},200);
-			}else{
-				window.issubopened=true;
-				pitext.innerHTML = msg;
-				pitem.style.display="block";
-				animate(pitem,{duration:200,left:400},"left");
-				animate(plist,{duration:200,right:window.innerWidth-416},"right");
-			}
-		};
-		getSubData(id,callback);
-		return;
-	}
-};
 </script>
 <script src="/mdc.js"></script>
 <script>mdc.autoInit()</script>
+
 </body>
 </html>
