--- a/products/index.html
+++ b/products/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <script>
-var list={MinecraftPE游戏地图:[{name:"Tiger Fan",id:0}],Flash:[{name:"Traps N' Roads",id:1}],Desktop:[{name:"Edgar u089",id:2},{name:"Queue Huo",id:3},{name:"Alan Liang",id:4}]};
+var list={MinecraftPE游戏地图:[{name:"",id:0}],Flash:[{name:"Traps N' Roads",id:1}],Mobile:[{name:"Crasher",id:5}],Desktop:[{name:"Edgar Su",id:2},{name:"Queue Huo",id:3},{name:"Alan Liang",id:4}]};
 </script>
 <!--google stylesheets-->
 <link href="/gs.css" rel="stylesheet" type="text/css" />
