--- a/products/5/product.html
+++ b/products/5/product.html
@@ -29,4 +29,4 @@
 <li>到了后期，胜负由您来决定!</li>
 </ul>
 </span>
-<a class="button"  href="./5/release.apk" ><img src="./android.png"  />Download</a>
+<a class="button"  href="./5/Release.apk" ><img src="./android.png"  />Download</a>
