--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ var list={MinecraftPE游戏地图:[{name:"",id:0}],Flash:[{name:"Traps N' Roads"
 <link href="/mdc-patch.css" rel="stylesheet" type="text/css" />
 
 <link href="/styles.css" rel="stylesheet" type="text/css" />
-<meta name="theme-color" content="#002d4d">
+<meta name="theme-color" id="themecolor" content="#002d4d">
 <meta charset="utf-8">
 <title>客页 | KEEER</title>
 
