--- a/products/5/product.html
+++ b/products/5/product.html
@@ -1,24 +1,20 @@
 <style>
 .hero{
-	width:40%;
-	position:static;
-
-	float:left;
+	width:100%;
 }
 .h1 {
 	font-size: 64px;
 	width:100%;
 }
-.h1,.h2{
-	float:left;
+a.button{
+	font-size:23px;
 }
-.h2{
-	width:58%;
+a.button>img{
+	height:100%;
 }
 </style>
 <img class="hero" src="./5/snapshot.PNG">
 <span class="h2">
-<span class="h1">Crasher</span>
 <br />
 <h2>前所未有的玩法：</h2>
 <ul>
@@ -29,4 +25,4 @@
 <li>到了后期，胜负由您来决定!</li>
 </ul>
 </span>
-<a class="button"  href="./5/Release.apk" ><img src="./android.png"  />Download</a>
+<a class="button green" href="./5/Release.apk" ><img src="./android.png" />Download</a>
