--- a/about.html
+++ b/about.html
@@ -43,10 +43,10 @@ function debug(str){
 }
 var templ=document.getElementById("templ").innerHTML;
 var names=[	{Name:"Queue",Desc:"<p>I am not Queue.</p>"},
-{Name:"Alan-Liang",Desc:"<p>I am not Alan-Liang.</p>"},			
-{Name:"Edgaru089",Desc:"<p>I am not Edgar.Donec suscipit dapibus porta. Suspendisse ultrices hendrerit dictum. Praesent quis ex venenatis, semper augue sed, scelerisque leo. Donec eget volutpat lacus, quis luctus sapien. Integer id massa ac leo consequat fermentum. Aliquam quis venenatis metus. Nam bibendum sed ipsum vel fermentum. Sed pulvinar laoreet consequat. Nam congue aliquam pretium.</p>"},
+{Name:"Alan-Liang",Desc:"<p>I am not Alan-Liang.</p><p>Mail: alan-liang@keeer.ga</p>"},			
+{Name:"Edgaru089",Desc:"<p>I am not Edgar.</p><p>Mail: edgaru089@keeer.ga</p><p>Donec suscipit dapibus porta. Suspendisse ultrices hendrerit dictum. Praesent quis ex venenatis, semper augue sed, scelerisque leo. Donec eget volutpat lacus, quis luctus sapien. Integer id massa ac leo consequat fermentum. Aliquam quis venenatis metus. Nam bibendum sed ipsum vel fermentum. Sed pulvinar laoreet consequat. Nam congue aliquam pretium.</p>"},
 			
-			{Name:"Tiger Fan",Desc:"<p>I continue loving myself...</p><p>我自尊自爱<s>自慰</s>自卫</p>"},
+			{Name:"Tiger Fan",Desc:"<p>I continue loving myself...</p><p>我自尊自爱<s>自慰</s>自卫</p><p>Mail: tigerfan@keeer.ga</p>"},
 			{Name:"Sunny Peng",Desc:"<p>I am not Sunny Peng</p>"}
 			];
 function tpl(str,idn){
