--- a/beta/kusweb/login_desktop.html
+++ b/beta/kusweb/login_desktop.html
@@ -59,6 +59,9 @@
 <button class="mdc-button mdc-button--raised mdc-button--primary" data-mdc-auto-init="MDCRipple">
   登录
 </button>
+<button class="mdc-button mdc-button--raised" data-mdc-auto-init="MDCRipple">
+  注册
+</button>
 </div>
 <div id="box_middle"><h2>或者</h2></div>
 <div id="block_right" class="box">
