--- a/beta/kusweb/login_desktop.html
+++ b/beta/kusweb/login_desktop.html
@@ -71,7 +71,8 @@
 <script src="./qr.js"></script>
 <script type="text/javascript">
 var qrcode = new QRCode(document.getElementById("qrcode"), {
-	text: location.href,
+	//text: location.href,
+	text:"http://j.keeer.ga/5",
 	width: 250,
 	height: 250,
 	colorDark : "#002d4d",
