--- a/index.html
+++ b/index.html
@@ -22,7 +22,21 @@ var list={MinecraftPE游戏地图:[{name:"",id:0}],Flash:[{name:"Traps N' Roads"
 	<div style="top: 19px; left: 54px; width: 48px; height: 48px;"><img src="/icons/more.svg" class="icon"></div>
 </div>
 </script>
-
+<!-- Piwik -->
+<script type="text/javascript">
+  var _paq = _paq || [];
+  /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
+  _paq.push(['trackPageView']);
+  _paq.push(['enableLinkTracking']);
+  (function() {
+    var u="//piwik.keeer.ga/";
+    _paq.push(['setTrackerUrl', u+'piwik.php']);
+    _paq.push(['setSiteId', '1']);
+    var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+    g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
+  })();
+</script>
+<!-- End Piwik Code -->
 </head>
 
 <body>
