--- a/products/1/product.html
+++ b/products/1/product.html
@@ -24,9 +24,18 @@
 					<param name="salign" value="" />
 					<param name="allowScriptAccess" value="sameDomain" />
 				<!--<![endif]-->
-					<a href="http://www.adobe.com/go/getflash">
-						<img src="http://www.adobe.com/images/shared/download_buttons/get_flash_player.gif" alt="获得 Adobe Flash Player" />
-					</a>
+<style>
+a.button{
+	font-size:23px;
+}
+a.button>img{
+	height:100%;
+}
+</style>
+<a class="button green" href="https://keeer-bz-keeer-webdav.7e14.starter-us-west-2.openshiftapps.com/files/download/4c314231596d78705979396b61584e304c3152795958427a546c4a765957527a4c30466b62324a6c51556c534c6d467761773d3d/AdobeAIR.apk" ><img src="./android.png" />Download Runtime</a>
+<a class="button green" href="https://keeer-bz-keeer-webdav.7e14.starter-us-west-2.openshiftapps.com/files/download/4c314231596d78705979396b61584e304c3152795958427a546c4a765957527a4c3152795958427a546c4a765957527a4c5445754d4334774c6e4e335a673d3d/TrapsNRoads-1.0.0.swf" ><img src="./android.png" />Download</a>
+<a class="button green" href="https://keeer-bz-keeer-webdav.7e14.starter-us-west-2.openshiftapps.com/?url=/files/list/4c314231596d78705979396b61584e304c3152795958427a546c4a765957527a4c773d3d" >View all downloads</a>
+
 				<!--[if !IE]>-->
 				</object>
 				<!--<![endif]-->
