--- a/products/5/product.html
+++ b/products/5/product.html
@@ -25,4 +25,5 @@ a.button>img{
 <li>到了后期，胜负由您来决定!</li>
 </ul>
 </span>
-<a class="button green" href="./5/Release.apk" ><img src="./android.png" />Download</a>
+<a class="button green" href="https://keeer-bz-keeer-webdav.7e14.starter-us-west-2.openshiftapps.com/files/download/4c314231596d78705979396b61584e304c304e7959584e6f5a58497651334a686332686c636930784c6a41754d4335686347733d/Crasher-1.0.0.apk" ><img src="./android.png" />Download</a>
+<a class="button green" href="https://keeer-bz-keeer-webdav.7e14.starter-us-west-2.openshiftapps.com/?url=/files/list/4c314231596d78705979396b61584e304c304e7959584e6f5a584976" >View all downloads</a>
