--- a/beta/kusweb/login_desktop.html
+++ b/beta/kusweb/login_desktop.html
@@ -86,7 +86,7 @@ var qrcode = new QRCode(document.getElementById("qrcode"), {
 </div>
 </div>
 
-<a href="http://www.keeer.ml/"><img class="logo" src="logo.png" /></a>
+<a href="https://www.keeer.cf/"><img class="logo" src="logo.png" /></a>
 
 </div>
 <div class="container confirm" id="confirm">
@@ -129,7 +129,7 @@ var qrcode = new QRCode(document.getElementById("qrcode"), {
 
 </div>
 
-<a href="http://www.keeer.ml/"><img class="logo" src="logo.png" /></a>
+<a href="https://www.keeer.cf/"><img class="logo" src="logo.png" /></a>
 
 </div>
 
