--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ var list={MinecraftPE游戏地图:[{name:"",id:0}],Flash:[{name:"Traps N' Roads"
   _paq.push(['trackPageView']);
   _paq.push(['enableLinkTracking']);
   (function() {
-    var u="//piwik.keeer.ga/";
+    var u="//alan.liangcn.ml/";
     _paq.push(['setTrackerUrl', u+'piwik.php']);
     _paq.push(['setSiteId', '1']);
     var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
@@ -85,7 +85,7 @@ var list={MinecraftPE游戏地图:[{name:"",id:0}],Flash:[{name:"Traps N' Roads"
         <a class="plist_link" href="/products/">项目列表</a>
         <a class="contact-us" href="/contact.html">联系我们</a>
     </div>
-    <a href="http://www.keeer.ml/"><img class="logo" src="/logo.png" /></a>
+    <a href="https://www.keeer.cf/"><img class="logo" src="/logo.png" /></a>
 </div>
 </div>
 
