--- a/products/view.html
+++ b/products/view.html
@@ -71,7 +71,7 @@ var list={MinecraftPE游戏地图:[{name:"",id:0}],Flash:[{name:"Traps N' Roads"
         <a class="plist_link" href="/products/">项目列表</a>
         <a class="contact-us" href="/contact.html">联系我们</a>
     </div>
-    <a href="http://www.keeer.ml/"><img class="logo" src="/logo.png" /></a>
+    <a href="https://www.keeer.cf/"><img class="logo" src="/logo.png" /></a>
 </div>
 </div>
 
