--- a/beta/kusweb/login_phone.html
+++ b/beta/kusweb/login_phone.html
@@ -8,5 +8,6 @@
 <body>
 <script src="./utils.js"></script>
 <script>document.write(getParam("code"));</script>
+<div style="position: fixed;bottom: 0;left: 0;right: 0;background: #222;color: white;text-align: center;padding: 8px;">您在浏览我们陈旧且没有完工的网站。这个站点仅作为历史的见证而保留，其中的内容大部分已经过期。要访问我们现在的主页，请点击 <a href="https://keeer.net/?utm_source=v1" style="color: #aaf;">这里</a>。</div>
 </body>
 </html>
